--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js" rel="stylesheet" type="application/javascript">
     <script src="https://use.fontawesome.com/92848aeaa7.js"></script>
     <link rel="apple-touch-icon" href="/logo192.png" />
-    <title>React Webpack App</title>
+    <title>Proyecto MERN</title>
 </head>
 <body>
     <div id="app"></div>
